--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How to Open Your Heart? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 minutes ago</div>
+                        <div class="date">26 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>When RSI Crosses 70, How Often Does It Keep Climbing?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>The first politician on Gary's Economics</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How the Market Tests Traders</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Committing Your Life to Letting Go</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>3 Breathing Secrets I Learned After My Lung Collapsed</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>I GOT SCHOOLED BY NEW YORK-PIZZA GUY AT HOME 100%</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>How to Make Contemporary Neapolitan Pizza - Canotto Style</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>$4,432 Profit in a single FTMO Account (Just trust the Process!)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>Navratri & Periods: Can Women Visit Temples? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -475,7 +475,7 @@
                     <div class="video-info">
                         <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -684,7 +684,7 @@
                     <div class="video-info">
                         <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -695,7 +695,7 @@
                     <div class="video-info">
                         <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2263,7 +2263,7 @@
                     <div class="video-info">
                         <h3>The Men Who Explained the Universe | Thales, Anaximander & Anaximenes</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 29, 2025</div>
                     </div>
                 </a>
             </div>
@@ -2274,7 +2274,7 @@
                     <div class="video-info">
                         <h3>AI will drive mass unemployment and inequality</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 29, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>When RSI Crosses 70, How Often Does It Keep Climbing?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>The first politician on Gary's Economics</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>How the Market Tests Traders</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5140,7 +5140,7 @@
                         <div class="video-info">
                             <h3>$4,432 Profit in a single FTMO Account (Just trust the Process!)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5261,7 +5261,7 @@
                         <div class="video-info">
                             <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5993,7 +5993,7 @@
                         <div class="video-info">
                             <h3>AI will drive mass unemployment and inequality</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 29, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>How to Open Your Heart? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 minutes ago</div>
+                            <div class="date">26 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Committing Your Life to Letting Go</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7374,7 +7374,7 @@
                         <div class="video-info">
                             <h3>Navratri & Periods: Can Women Visit Temples? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7385,7 +7385,7 @@
                         <div class="video-info">
                             <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7473,7 +7473,7 @@
                         <div class="video-info">
                             <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7803,7 +7803,7 @@
                         <div class="video-info">
                             <h3>The Men Who Explained the Universe | Thales, Anaximander & Anaximenes</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 29, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -8238,7 +8238,7 @@
                         <div class="video-info">
                             <h3>3 Breathing Secrets I Learned After My Lung Collapsed</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>I GOT SCHOOLED BY NEW YORK-PIZZA GUY AT HOME 100%</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8750,7 +8750,7 @@
                         <div class="video-info">
                             <h3>How to Make Contemporary Neapolitan Pizza - Canotto Style</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
