--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Scalp Nasdaq Like This ⚡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">18 minutes ago</div>
+                        <div class="date">32 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How to Open Your Heart? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">51 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Scalp Nasdaq Like This ⚡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">18 minutes ago</div>
+                            <div class="date">32 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>How to Open Your Heart? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">51 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
