--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN DRIVING TEST</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7330,7 +7330,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN DRIVING TEST</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
